--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/spring-security-tutorial
+spring.datasource.url = jdbc:mysql://localhost:3306/springbd
 spring.datasource.username = root
 spring.datasource.password = mysql
 spring.datasource.testWhileIdle = true
